MAPRYARN-326: Added SCRAM-SASL to Hadoop